Exercise_3/createPod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: cherry
  name: cherry
  namespace: fruits
spec:
  containers:
  - image: nginx:latest
    name: cherry
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: "30m"
        memory: "50Mi"
      limits:
        cpu: "100m"
        memory: "150Mi"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: banana
  name: banana
  namespace: fruits
spec:
  containers:
  - image: k8simage:v0.1
    imagePullPolicy: Never
    name: banana
    resources: {}
    ports:
      - containerPort: 80
  restartPolicy: Never
status: {}
