Exercise_3/loadbalancerExers3.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8singress-lb
  name: k8singress-lb
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: k8singress-lb
  type: LoadBalancer
status:
  loadBalancer: {}
