Exercise_3/serviceManifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: football
  name: football-svc
  namespace: league
spec:
  ports:
  - port: 12500
    protocol: TCP
    targetPort: 80
  selector:
    sport: football
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: food
  name: food-svc
  namespace: fruits
spec:
  ports:
  - port: 12550
    protocol: TCP
    targetPort: 80
  selector:
    store: supermarket
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: drinks
  name: drink-svc
  namespace: liquid
spec:
  ports:
  - port: 12600
    protocol: TCP
    targetPort: 80
  selector:
    store: bar
  type: LoadBalancer
status:
  loadBalancer: {}
